Fix clipping by changing squad item height

--- a/main.css
+++ b/main.css
@@ -136,7 +136,7 @@ body
 
 .squad-cell
 {
-    height:320px;
+    height: 225px;
     margin: 10px;
     background-position: top;
     background-size: cover !important;
